--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,25 @@
+# Configurazione del server
 spring.application.name=SocialNetwork
-server.error.include-binding-errors=always
-server.error.include-exception=false
-server.error.include-message=always
-spring.jpa.hibernate.ddl-auto = update
+server.port=8080
+
+# Configurazione del database
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/socialnetwork
 spring.datasource.username = root
 spring.datasource.password = root
+
+# Configurazione di JPA e Hibernate
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
+
+# Configurazione degli errori
+server.error.include-binding-errors=always
+server.error.include-exception=false
+server.error.include-message=always
+
+# Swagger
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.doc-expansion=none
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.tags-sorter=alpha
+
