--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username = root
 spring.datasource.password = root
 
 # Configurazione di JPA e Hibernate
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 
 # Configurazione degli errori
