--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/socialnetwork
 spring.datasource.username = root
-spring.datasource.password = rootroot
+spring.datasource.password = root
 
 # Configurazione di JPA e Hibernate
 spring.jpa.hibernate.ddl-auto = update
